--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,11 @@
 {
+  "name": "scootersam/angular-cli",
+  "type": "library",
+  "description": "AngularCLI tool built in php.",
+  "keywords": [
+  ],
+  "homepage": "https://github.com/ScooterSam/AngularCli",
+  "license": "MIT",
   "require": {
     "symfony/console": "2.6.7",
     "symfony/filesystem": "^3.2"
