--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   "homepage": "https://github.com/ScooterSam/AngularCli",
   "license": "MIT",
   "require": {
-    "symfony/console": "2.6.7",
+    "symfony/console": "^2.6",
     "symfony/filesystem": "^3.2"
   },
   "autoload": {
